--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,103 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.error-container{
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.error-container h1{
+  margin: 0;
+  font-size: 100px;
+  font-weight: 900;
+  background: linear-gradient(180deg, rgb(255, 255, 255) ,#000000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.error-container h4{
+  margin: 0;
+  font-size: 20px;
+  font-weight:400;
+  letter-spacing: 10px;
+}
+
+.blob{
+  position: absolute;
+  left: -350px;
+  top: -200px;
+  z-index: -100;
+  animation: rotate 10s infinite linear;
+}
+
+@keyframes rotate {
+  0%   { transform: rotate(0deg);}
+  100% {transform: rotate(360deg);}
+}
+
+.dashboard-container{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+}
+
+.dashboard-left{
+  width: 25vb;
+  background-color: rgb(185, 185, 185);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding-block: 20px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.dashboard-right{
+  width: 180vb;
+  background-color: rgb(227, 227, 227);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dashboard-left ul {  
+  list-style-type: none;  
+  position: relative;
+  left: -20px;
 }
+
+.dashboard-list{
+  font-size: 18px;
+  font-weight: 600;
+  padding-block: 10px;
+  padding-inline: 8px;
+}
+
+.dashboard-list:hover {
+  padding-block: 10px;
+  padding-inline: 8px;
+  cursor: pointer;
+  background-color: rgb(227, 227, 227);
+  box-shadow: 0px 5px 10px rgb(125, 125, 125);
+  border-radius: 10px;
+}
+
+.list-items{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.person-image{
+  width: 70px;
+  height: 70px;
+  border: 2px solid rgb(65, 65, 65);
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+.HPCL-logo{
+  width: 50px;
+  height: auto;
+}
+
