--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.home-container{
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+
 .error-container{
   position: absolute;
   transform: translate(-50%, -50%);
@@ -76,11 +83,11 @@
 
 .dashboard-list:hover {
   padding-block: 10px;
-  padding-inline: 8px;
+  padding-inline: 20px;
   cursor: pointer;
-  background-color: rgb(227, 227, 227);
+  background-color: rgb(200, 200, 200);
   box-shadow: 0px 5px 10px rgb(125, 125, 125);
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .list-items{
