--- a/src/Pages/form.css
+++ b/src/Pages/form.css
@@ -28,12 +28,14 @@ form{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
   padding-block: 20px;
+  margin-top: 20px;
 }
 
 .form-element{
   width: 90%;
+  position: relative;
 }
   
 .form input {
@@ -42,18 +44,22 @@ form{
   padding-left: 10px;
   border: none;
   border-radius: 20px;
-  box-shadow: 5px 5px 10px gray;
+  box-shadow: 0px 5px 10px gray;
 }
 
 .form input:hover{
-  width: 95%;
+  width: 92%;
   height: 42px;
   cursor: pointer;
 }
   
 label{
+  color: rgb(104, 104, 104);
   font-size: 16px;
   font-weight: 600;
+  position: absolute;
+  top: -22px;
+  left: 40px;
 }
   
 .submit-btn{
@@ -75,6 +81,7 @@ label{
 
 .link-btn{
   border: none;
+  color: rgb(104, 104, 104);
   font-size: 14px;
   padding: 10px;
   border-radius: 20px;
@@ -83,23 +90,32 @@ label{
 
 .link-btn:hover{
   cursor: pointer;
-  background-color: whitesmoke;
-  box-shadow: 5px 5px 10px gray;
+  /* background-color: whitesmoke; */
+  /* box-shadow: inset 0px 5px 10px rgba(128, 128, 128, 0.399), inset 0px -5px 10px white, 5px 5px 10px rgba(128, 128, 128, 0.399), 0px -5px 10px rgb(255, 255, 255); */
   border-radius: 20px;
+  color: black;
+  font-size: 15px;
+  text-decoration: underline;
 }
 
 .login-btn{
-  background-color: #21fd4d;
   padding-inline: 30px;
   font-size: 14px;
   font-weight: 600;
   letter-spacing: 1px;
   cursor: pointer;
   border-radius: 20px;
+  box-shadow: 0px 5px 10px rgb(125, 125, 125, 0.5);
 }
 
 .login-btn:hover{
   cursor: pointer;
+  background-color: #21fd4d;
   box-shadow: 0px 5px 10px rgb(125, 125, 125, 0.5);
   border-radius: 20px;
+}
+
+
+.error-message{
+  color: red;
 }
