--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,12 @@
   left: -20px;
 }
 
+.active {
+  border-radius: 15px;
+  background-color: rgb(185, 185, 185);
+  box-shadow: -4px -4px 5px rgba(255, 255, 255, 0.2),  4px 4px 5px rgba(0, 0, 0, 0.30);
+}
+
 .dashboard-list{
   font-size: 18px;
   font-weight: 600;
@@ -97,11 +103,35 @@
 }
 
 .person-image{
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   border: 2px solid rgb(65, 65, 65);
   border-radius: 100%;
   object-fit: cover;
+}
+
+.user-control{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.logout-btn{
+  font-size: 14px;
+  font-weight: 600;
+  padding-block: 10px;
+  padding-inline: 20px;
+  cursor: pointer;
+  border: none;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 5px 10px rgb(125, 125, 125);
+  border-radius: 15px;
+}
+
+.logout-btn:hover{
+  background-color: rgb(255, 58, 58);
+  color: white;
 }
 
 .HPCL-logo{
